# ocds-merge

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  lint.yml  pypi.yml
docs/: changelog.rst  conf.py  create-merged-releases.rst  handle-bad-data.rst  index.rst  update-merged-releases.rst
docs/api/: index.rst
ocdsmerge/: __init__.py  errors.py  exceptions.py  flatten.py  merge.py  release-schema.json  rules.py  tests.py  util.py
ocdsmerge/fixtures/: lists_example.py  mergeid_example.py  simple_example.py  string_list_example.py  unit_example.py
tests/: __init__.py  conftest.py  test_collisions.py  test_fixtures.py  test_flatten.py  test_get_merge_rules.py  test_merge.py  test_rules.py  test_util.py
tests/cassettes/: test_append_no_id.yaml  test_date_errors.yaml  test_date_errors[MissingDateKeyError-data0].yaml  test_errors.yaml  test_merge.yaml  test_missing_date_key_error.yaml  test_warn.yaml
tests/cassettes/test_merge[tests/fixtures/1.0/suppliers-compiled.json-https:/standard.open-contracting.org/schema/1__0__3/: release-schema.json].yaml
tests/fixtures/: README.md  lists_example.py  mergeid_example.py  release-schema-1__1__4.json  schema.json  simple_example.py  unit_example.py  versioned-release-validation-schema-1__1__4.json
tests/fixtures/1.0/: suppliers-compiled.json  suppliers-versioned.json  suppliers.json
tests/fixtures/1.1/: README.md  contextual-compiled.json  contextual-versioned.json  contextual.json  empty-array-versioned.json  empty-identifiermerge-array-versioned.json  empty-identifiermerge-array.json  empty-object-compiled.json  empty-object-versioned.json  empty-object.json  empty-wholelistmerge-array-compiled.json  empty-wholelistmerge-array-versioned.json  empty-wholelistmerge-array.json  fill-identifiermerge-array-compiled.json  fill-object-compiled.json  fill-object-versioned.json  fill-object.json  initial-null-versioned.json  initial-null.json  lists-compiled.json  lists.json  mergeid-versioned.json  null-compiled.json  null-versioned.json  null.json  nullone-compiled.json  simple-compiled.json  simple.json  single-empty-array.json  single-empty-identifiermerge-array-compiled.json  single-empty-object-versioned.json  single-empty-object.json  single-empty-wholelistmerge-array-compiled.json  single-empty-wholelistmerge-array-versioned.json  single-empty-wholelistmerge-array.json  string-list-compiled.json  unit-compiled.json  unit-versioned.json  update-empty-array-compiled.json  update-empty-array-versioned.json  (+4 more)
tests/fixtures/ocds/: lists-compiled.json  lists-versioned.json  lists.json  mergeid-compiled.json  mergeid-versioned.json  mergeid.json  simple-compiled.json  simple-versioned.json  simple.json  string-list-compiled.json  string-list-versioned.json  string-list.json  unit-compiled.json  unit-versioned.json  unit.json
tests/fixtures/schema/: array-of-non-objects-is-omit-when-merged.json  deep-identifier-merge-compiled.json  deep-identifier-merge.json  deep-omit-when-merged-compiled.json  deep-omit-when-merged.json  deep-whole-list-merge-compiled.json  deep-whole-list-merge.json  identifier-merge-collision-compiled.json  identifier-merge-collision.json  identifier-merge-deep-compiled.json  identifier-merge-deep.json  identifier-merge-duplicate-id-append.json  identifier-merge-duplicate-id-by-position.json  identifier-merge-duplicate-id-compiled.json  identifier-merge-duplicate-id.json  identifier-merge-no-id-append.json  identifier-merge-no-id.json  merge-property-is-false-compiled.json  merge-property-is-false.json  no-top-level-id-compiled.json  no-top-level-id.json  object-is-whole-list-merge.json  omit-when-merged-array-of-non-objects-compiled.json  omit-when-merged-array-of-non-objects.json  omit-when-merged-deep.json  omit-when-merged-shadow-compiled.json  omit-when-merged-shadow.json  omit-when-merged-shadowed-compiled.json  omit-when-merged-shadowed.json  version-id-versioned.json  version-id.json  whole-list-merge-deep-compiled.json  whole-list-merge-duplicate-id-compiled.json  whole-list-merge-duplicate-id.json  whole-list-merge-empty-compiled.json  whole-list-merge-empty.json  whole-list-merge-no-id-compiled.json  whole-list-merge-no-id.json  whole-list-merge-object-compiled.json  whole-list-merge-object.json
