[metadata]
name = ocdsmerge
version = 0.6.6
author = Open Contracting Partnership
author_email = data@open-contracting.org
license = BSD
description = A library and reference implementation for merging OCDS releases
url = https://github.com/open-contracting/ocds-merge
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    jsonref
    requests

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
test =
    coveralls
    jsonschema
    pytest
    pytest-cov
    pytest-vcr
